# meme-generator-web-server

./: .gitignore  CMakeLists.txt  README.md
configuration/: docker.conf  docker_config  handler_config  starter.conf  starter_config
data/data_img/: test2.txt
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: api_request_handler.h  config_parser.h  echo_request_handler.h  error_request_handler.h  health_request_handler.h  http_parser.h  logging.h  meme_request_handler.h  mime.h  request_factory.h  request_handler.h  server.h  session.h  static_request_handler.h
memes_dir/memes_form/: memes_form.html
memes_dir/memes_html/: create.html  list.html  view.html
src/: api_handler_factory.cc  api_request_handler.cc  config_parser.cc  echo_handler_factory.cc  echo_request_handler.cc  error_handler_factory.cc  error_request_handler.cc  health_handler_factory.cc  health_request_handler.cc  http_parser.cc  logging.cc  meme_handler_factory.cc  meme_request_handler.cc  mime.cc  request_factory.cc  request_handler.cc  server.cc  server_main.cc  session.cc  static_handler_factory.cc  static_request_handler.cc
tests/: api_request_handler_test.cc  config_parser_test.cc  config_statement_test.cc  config_test.cc  echo_request_handler_test.cc  error_request_handler_test.cc  health_request_handler_test.cc  http_parser_test.cc  integration_tests.sh  logging_test.cc  meme_request_handler_test.cc  mime_test.cc  no_whitespace_after_double_quote_config  request_handler_test.cc  server_test.cc  session_test.cc  static_request_handler_test.cc
tests/integration/: integration_tests.sh
tests/integration/http_requests/: api_create_request  api_delete_request  api_list_request  api_read_request  api_update_request  echo_request  health_request  missing_method_request  static_etc_request  static_image_request  static_text_request
tests/integration/http_responses/: expected_api_create_response  expected_api_read_response  expected_echo_response  expected_health_response  expected_static_etc_response  expected_static_image_response
tests/test_configs/: api_handler_bad1  api_handler_bad2  config_backslashes  config_comments  config_empty_brackets  config_mixed_quote  config_nested_brackets  config_port_deep_nested  config_port_nested  config_port_none  config_statement_with_multiple_tokens  config_testing  config_trailing_whitespace  config_whitespace_semicolon  meme_good  meme_no_html_root  meme_no_images_root  meme_no_memes_created_root  meme_no_roots
tests/test_meme_dir/memes_html/: form.html
tests/test_memes_dir/memes_html/: create.html
